--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,7 @@ edition = "2018"
 
 [[bin]]
 name = "yakking_yak"
-path = "src/rust/gtk_main.rs"
-
-[lib]
-crate-type = ["cdylib"]
-path = "src/rust/web_main.rs"
+path = "src/rust/main.rs"
 
 [dependencies]
 serde = {version = "~1.0",  features = ["derive"]}
@@ -28,7 +24,6 @@ k256="~0.13"
 magic-crypt = "~3.1"
 getrandom = { version = "0.2", features = ["js"] }
 
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 gtk = { version = "*", package = "gtk4", features = ["v4_6"] }
 adw = { version = "~0.4", package = "libadwaita", features = ["v1_1"] }
 glib = "~0.17"
@@ -37,21 +32,3 @@ lazy_static = "~1.4"
 rust_socketio = "~0.4"
 # libp2p = "~0.52"
 crossbeam-queue = "0.3"
-
-[target.'cfg(target_arch = "wasm32")'.dependencies]
-wasm-bindgen = "~0.2"
-js-sys = "~0.3"
-
-[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
-version = "~0.3"
-features = [
-  'Document',
-  'Element',
-  'HtmlElement',
-  'Window',
-  'Event',
-  "console"
-]
-
-[profile.release]
-debug = true
