--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,12 @@ edition = "2018"
 
 [[bin]]
 name = "client"
-path = "src/main_client.rs"
+path = "src/main.rs"
 
 [dependencies]
 serde = {version = "~1.0",  features = ["derive"]}
 serde_json = "~1.0"
-base64 = "~0.21"
+base64 = "~0.22"
 x25519-dalek = {path="x25519-dalek"}
 rand_core="~0.6"
 rand_chacha = "~0.3"
@@ -25,10 +25,14 @@ magic-crypt = "~3.1"
 getrandom = { version = "0.2", features = ["js"] }
 
 gtk = { version = "*", package = "gtk4", features = ["v4_6"] }
-adw = { version = "~0.4", package = "libadwaita", features = ["v1_1"] }
-glib = "~0.17"
-glib-macros = "~0.17"
-lazy_static = "~1.4"
-rust_socketio = "~0.4"
-# libp2p = "~0.52"
-crossbeam-queue = "0.3"
+adw = { version = "~0.6", package = "libadwaita", features = ["v1_1"] }
+glib = "~0.19"
+glib-macros = "~0.19"
+lazy_static = "~1.5"
+crossbeam-queue = "~0.3"
+
+
+webrtc = "~0.11"
+firebase-rs = "~2.1"
+futures-executor = "~0.3"
+tokio = { version = "~1.38" }
